# haskello

./: .gitignore  Main.hs  Parser.hs  README.md  TrelloApi.hs  haskello.cabal
app/: Main.hs
src/: Cursor.hs  Event.hs  Haskello.hs  UI.hs
src/State/: AppState.hs  Changelist.hs  Editor.hs  Types.hs
src/Trello/: Api.hs  Types.hs
tests/: Main.hs  TestCursor.hs
