cabal-version:       >=1.10
name:                haskello
version:             0.1.0.0
synopsis:            Simple Trello ncurses client
license-file:        LICENSE
author:              Mateusz Marczak
maintainer:          amonowy@gmail.com
build-type:          Simple
extra-source-files:  README.md

executable haskello
  main-is:             Main.hs
  other-modules:       Parser, TrelloApi
  build-depends:       base >=4.13 && <4.14,
                       text >= 1.2.4.0,
                       bytestring >= 0.10.10.1,
                       wreq >= 0.5.3.3,
                       lens >= 5.0.1,
                       ncurses >= 0.2.16,
                       aeson >= 1.5.4.0
  default-language:    Haskell2010
