cabal-version:       >=1.10
name:                haskello
version:             0.1.0.0
synopsis:            TUI Trello Client
license-file:        LICENSE
author:              Mateusz Marczak
maintainer:          amonowy@gmail.com
build-type:          Simple
extra-source-files:  README.md

executable haskello
  main-is:             Main.hs
  ghc-options:         -O2 -Wall -fwarn-tabs -funbox-strict-fields -threaded -fno-warn-unused-do-bind -rtsopts -threaded
  hs-source-dirs:      app, src
  other-modules:       Haskello, Cursor, State.AppState, State.Changelist, State.Editor, Event, State.Types, UI, Trello.Types, Trello.Api
  build-depends:       base >=4.12,
                       text >= 1.2.4.0,
                       bytestring >= 0.10.10.1,
                       wreq >= 0.5.3.3,
                       http-client,
                       lens >= 4.0.1,
                       aeson >= 1.5.4.0,
                       brick >= 0.62,
                       mtl == 2.2.2,
                       vty >= 5.33,
                       unordered-containers >= 0.2.14.0,
                       vector >= 0.12.3.0,
                       text-zipper == 0.11,
                       time == 1.9.3,
                       word-wrap == 0.4.1

  default-language:    Haskell2010

test-suite tests
  main-is:             tests/Main.hs
  type:                exitcode-stdio-1.0
  build-depends:       base
                       , hspec
  hs-source-dirs:      tests, app, src
  other-modules:       Cursor, TestCursor
  build-depends:       base >=4.12,
                       text >= 1.2.4.0,
                       bytestring >= 0.10.10.1,
                       wreq >= 0.5.3.3,
                       http-client,
                       mtl==2.2.2,
                       lens >= 4.0.1,
                       aeson >= 1.5.4.0,
                       brick >= 0.62,
                       vty >= 5.33,
                       unordered-containers >= 0.2.14.0,
                       vector >= 0.12.3.0,
                       text-zipper == 0.11,
                       time == 1.9.3
